--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,15 @@
 {
     "name": "magenxcommerce/module-configurable-product",
     "description": "N/A",
+    "type": "magento2-module",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
     "config": {
         "sort-packages": true
     },
+    "version": "100.3.6",
     "require": {
         "php": "~7.1.3||~7.2.0||~7.3.0",
         "magento/framework": "102.0.*",
@@ -28,11 +34,6 @@
         "magento/module-product-links-sample-data": "Sample Data version: 100.3.*",
         "magento/module-tax": "100.3.*"
     },
-    "type": "magento2-module",
-    "license": [
-        "OSL-3.0",
-        "AFL-3.0"
-    ],
     "autoload": {
         "files": [
             "registration.php"
@@ -40,6 +41,5 @@
         "psr-4": {
             "Magento\\ConfigurableProduct\\": ""
         }
-    },
-    "version": "100.3.5"
+    }
 }
